--- a/_layouts/stories.html
+++ b/_layouts/stories.html
@@ -7,15 +7,15 @@ title: 'Test for stories'
 ##  checkers
 
 
-<article class="post">
-  <h1>{{ page.title }}</h1>
+<article class="stories">
+  <h1>{{ stories.title }}</h1>
 
   <div class="entry">
     {{ content }}
   </div>
 
   <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
+    Written on {{ stories.date | date: "%B %e, %Y" }}
   </div>
 
   {% include disqus.html %}
