--- a/_layouts/stories.html
+++ b/_layouts/stories.html
@@ -1,13 +1,13 @@
 
 <article class="stories">
-  <h1>{{ stories.title }}</h1>
+  <h1>{{ page.title }}</h1>
 
   <div class="entry">
     {{ content }}
   </div>
 
   <div class="date">
-    Written on {{ stories.date | date: "%B %e, %Y" }}
+    Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
   {% include disqus.html %}
