--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,9 @@ published: true
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
+    <p align="left">
     {{ content }}
+ </p>
   </div>
 
   <div class="date">
