--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -3,7 +3,9 @@
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
+    <p align="left">
     {{ content }}
+ </p>
   </div>
 
   <div class="date">
@@ -12,3 +14,4 @@
 
   {% include disqus.html %}
 </article>
+
