--- a/style.scss
+++ b/style.scss
@@ -79,7 +79,7 @@ a {
 
 ul, ol {
   margin: 15px 0;
-  padding-left: 30px;
+  padding-left: 20px;
 }
 
 ul {
@@ -162,6 +162,16 @@ img {
     text-align: center;
   }
 }
+
+.leftcolumn {   
+  float: left;
+  width: 75%;
+}
+
+.rightcolumn {
+  float: left;
+  width: 25%;
+  padding-left: 20px;
 
 .site-avatar {
   float: left;
@@ -260,6 +270,27 @@ nav {
     font-size: 15px;
     font-style: italic;
   }
+
+.stories > .story {
+	padding-bottom: 2em;
+    border-bottom: 1px solid $lightGray;
+  }
+  
+
+.stories > .story:last-child {
+	padding-bottom: 1em;
+ 	border-bottom: none;
+}
+
+.story {
+	blockquote {
+    	 margin: 1.8em .8em;
+    border-left: 2px solid $gray;
+    padding: 0.1em 1em;
+    color: $gray;
+    font-size: 15px;
+    font-style: italic;
+   }
 
   .comments {
     margin-top: 10px;
