--- a/style.scss
+++ b/style.scss
@@ -173,6 +173,11 @@ img {
   width: 50%;
   padding-left: 20px;
 
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+
 .site-avatar {
   float: left;
   width: 70px;
