--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/literature">Literature</a>
+            <a href="{{ site.baseurl }}/literature.html">Literature</a>
             <a href="{{ site.baseurl }}/contact">Contact</a> 
           </nav>
         </header>
