--- a/style.scss
+++ b/style.scss
@@ -172,11 +172,13 @@ img {
   float: right;
   width: 50%;
   padding-left: 20px;
+}
 
 .row:after {
   content: "";
   display: table;
   clear: both;
+}
 
 .site-avatar {
   float: left;
